Fix mobile settings-width; Hide settings-seperator on mobile

--- a/src/app/tabs/settings/Settings.module.scss
+++ b/src/app/tabs/settings/Settings.module.scss
@@ -25,6 +25,10 @@
         margin: ($grid-margin / 2) 0;
         border-radius: 2px;
         flex-shrink: 0;
+
+        @include mq-phones {
+            display: none;
+        }
     }
 
     .tabButton {
@@ -68,6 +72,10 @@
         > div {
             position: absolute;
             padding: $grid-margin;
+            width: 100%;
+        }
+
+        @include mq-phones {
             width: 100%;
         }
     }
